Implementada interfaz del detail del CU Comprar
